--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-<header>
-    <div class="border-bottom border-dark">
+<header class="header-image-container">
+    <div class="border-bottom border-white">
         <div class="generic-margin-container d-flex justify-content-end">
             <ul>
                 <li class="d-inline">Hola</li>
@@ -16,21 +16,19 @@
             </ul>
         </div>
     </div>
-    <div>
-        <div class="generic-margin-container d-flex bd-highlight mb-3">
-            <div class="me-auto p-2 bd-highlight">
-                <img src="recursos/logotipos/logo_1tinta.svg">
-            </div>
-            <ul>
-                <li class="d-inline"><a href="#">Hola</a></li>
-                <li class="d-inline"><a href="#">Hola</a></li>
-                <li class="d-inline"><a href="#">Hola</a></li>
-                <li class="d-inline"><a href="#">Hola</a></li>
-                <li class="d-inline"><a href="#">Hola</a></li>
-            </ul>
+    <div class="generic-margin-container d-flex bd-highlight mb-3">
+        <div class="me-auto p-2 bd-highlight">
+            <img src="recursos/logotipos/logo_1tinta.svg" class="logo">
         </div>
+        <ul>
+            <li class="d-inline"><a href="#">Hola</a></li>
+            <li class="d-inline"><a href="#">Hola</a></li>
+            <li class="d-inline"><a href="#">Hola</a></li>
+            <li class="d-inline"><a href="#">Hola</a></li>
+            <li class="d-inline"><a href="#">Hola</a></li>
+        </ul>
     </div>
-    <div class="header-image-container">
+     <div class="d-flex align-content-end flex-wrap h1-container">
         <div class="generic-margin-container">
             <h1>Estudios y Montajes Eléctricos S.L.</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur</h3>
