--- a/index.html
+++ b/index.html
@@ -9,31 +9,135 @@
 <body>
 <header class="header-image-container">
     <div class="border-bottom border-white">
-        <div class="generic-margin-container d-flex justify-content-end">
+        <menu class="generic-margin-container d-flex justify-content-end mt-0">
             <ul>
-                <li class="d-inline">Hola</li>
-                <li class="d-inline"><a href="#">Hola</a></li>
+                <li class="d-inline"><a>Lorem</a></li>
+                <li class="d-inline"><a href="#"><a>Lorem</a></a></li>
             </ul>
-        </div>
+        </menu>
     </div>
-    <div class="generic-margin-container d-flex bd-highlight mb-3">
+    <menu class="generic-margin-container d-flex bd-highlight mb-3 second-menu">
         <div class="me-auto p-2 bd-highlight">
-            <img src="recursos/logotipos/logo_1tinta.svg" class="logo">
+            <img src="recursos/logotipos/logo_1tinta.svg" class="w-100" alt="logo">
         </div>
         <ul>
-            <li class="d-inline"><a href="#">Hola</a></li>
-            <li class="d-inline"><a href="#">Hola</a></li>
-            <li class="d-inline"><a href="#">Hola</a></li>
-            <li class="d-inline"><a href="#">Hola</a></li>
-            <li class="d-inline"><a href="#">Hola</a></li>
+            <li class="d-inline"><a>Lorem</a></li>
+            <li class="d-inline"><a>Lorem</a></li>
+            <li class="d-inline"><a>Lorem</a></li>
+            <li class="d-inline"><a>Lorem</a></li>
+            <li class="d-inline"><a>Lorem</a></li>
         </ul>
-    </div>
-     <div class="d-flex align-content-end flex-wrap h1-container">
+    </menu>
+    <div class="d-flex align-content-end flex-wrap h1-container">
         <div class="generic-margin-container">
             <h1>Estudios y Montajes Eléctricos S.L.</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+            <h2>Lorem ipsum dolor sit amet, consectetur</h2>
         </div>
     </div>
 </header>
+<section class="cards-section">
+    <header class="container generic-margin-container d-flex">
+        <div class="row align-self-center text-center">
+            <div class="col">
+                <h4>Nuestros servicios</h4>
+                <h5>Lorem ipsum dolor sit amet, consectetur</h5>
+            </div>
+        </div>
+    </header>
+    <div class="container generic-margin-container d-flex cards-container">
+        <div class="row align-self-center">
+            <div class="col">
+                <div class="card border-0 text-center">
+                    <img src="recursos/iconos/energia.svg" class="w-50 m-auto" alt="logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-0 text-center">
+                    <img src="recursos/iconos/energia.svg" class="w-50 m-auto" alt="logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-0 text-center">
+                    <img src="recursos/iconos/energia.svg" class="w-50 m-auto" alt="logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-0 text-center">
+                    <img src="recursos/iconos/energia.svg" class="w-50 m-auto" alt="logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-0 text-center">
+                    <img src="recursos/iconos/energia.svg" class="w-50 m-auto" alt="logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="text-light">
+    <div class="upper-footer">
+        <div class="generic-margin-container container">
+            <div class="row">
+                <div class="col">
+                    <img src="recursos/logotipos/logo_1tinta.svg" class="w-100 pb-4" alt="logo">
+                    <address>Estudios y Montajes Eléctricos, S.L. nace en el año 1966 con el fin de suplir</address>
+                </div>
+                <div class="col">
+                    <p class="bold">CONTACTO</p>
+                    <address>
+                        <p>965 67 68 68</p>
+                        <p>fdsdsf@gmail.com</p>
+                    </address>
+                    <div>
+                        <img src="recursos/logotipos/instagram.svg" class="d-inline social-media-icon" alt="instagram">
+                        <img src="recursos/logotipos/instagram.svg" class="d-inline social-media-icon" alt="instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <p class="bold">CERTIFICADOS</p>
+                    <div>
+                        <img src="recursos/logotipos/sellos.png" class="logo" alt="calidad">
+                    </div>
+                </div>
+                <div class="col">
+                    <p class="bold">INFORMACIÓN LEGAL</p>
+                    <div>
+                        <a>Aviso legal</a>
+                        <a>Aviso legal</a>
+                        <a>Aviso legal</a>
+                        <a>Aviso legal</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="lower-footer container-fluid d-flex">
+        <div class="row align-self-center text-light text-center ">
+            <div class="col text-light">
+                Lorem ipsum dolor sit amet, consectetur
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
