--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-<header class="header-image-container">
+<header class="header-image-container text-light">
     <div class="border-bottom border-white">
-        <menu class="generic-margin-container d-flex justify-content-end mt-0">
+        <menu class="first-menu generic-margin-container d-flex justify-content-end mt-0">
             <ul>
                 <li class="d-inline"><a>Lorem</a></li>
                 <li class="d-inline"><a href="#"><a>Lorem</a></a></li>
@@ -30,8 +30,8 @@
     </menu>
     <div class="d-flex align-content-end flex-wrap h1-container">
         <div class="generic-margin-container">
-            <h1>Estudios y Montajes Eléctricos S.L.</h1>
-            <h2>Lorem ipsum dolor sit amet, consectetur</h2>
+            <h1 class="bold">Estudios y Montajes Eléctricos S.L.</h1>
+            <h2 class="regular">Lorem ipsum dolor sit amet, consectetur</h2>
         </div>
     </div>
 </header>
@@ -39,8 +39,8 @@
     <header class="container generic-margin-container d-flex">
         <div class="row align-self-center text-center">
             <div class="col">
-                <h4>Nuestros servicios</h4>
-                <h5>Lorem ipsum dolor sit amet, consectetur</h5>
+                <h4 class="bold">Nuestros servicios</h4>
+                <h5 class="regular">Lorem ipsum dolor sit amet, consectetur</h5>
             </div>
         </div>
     </header>
